Fix styling on mobile

--- a/sites/all/themes/humanitarianresponse/assets/sass/screen.scss
+++ b/sites/all/themes/humanitarianresponse/assets/sass/screen.scss
@@ -41,12 +41,13 @@
 
 .container.header #navigation ul.menu {
   position: relative;
-  top: auto;
+  top: 17px;
   padding-left: 10px;
 }
 
 @media screen and (max-width: 768px) {
   .container.header #navigation ul.menu {
+    top: auto;
     background: white;
     z-index: 3;
     margin-top: 0;
